# cmake-example

./: CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt  math_ops.c
src/adder/: CMakeLists.txt  adder.c
src/adder/include/: adder.h
src/include/: math_ops.h
test/: CMakeLists.txt  math_ops.cpp
